--- a/services_inside.html
+++ b/services_inside.html
@@ -159,18 +159,12 @@
                         <div class="service-balls-title">Шары</div>
                         <div class="service-balls-list">
                             <div class="service-balls-list-inner">
-                                <div class="service-balls-item"><a href="#"><img src="files/service-balls-1.jpg" alt="" /></a></div>
-                                <div class="service-balls-item"><a href="#"><img src="files/service-balls-2.jpg" alt="" /></a></div>
-                                <div class="service-balls-item"><a href="#"><img src="files/service-balls-3.jpg" alt="" /></a></div>
-                                <div class="service-balls-item"><a href="#"><img src="files/service-balls-4.jpg" alt="" /></a></div>
-                                <div class="service-balls-item"><a href="#"><img src="files/service-balls-1.jpg" alt="" /></a></div>
-                                <div class="service-balls-item"><a href="#"><img src="files/service-balls-2.jpg" alt="" /></a></div>
-                                <div class="service-balls-item"><a href="#"><img src="files/service-balls-3.jpg" alt="" /></a></div>
-                                <div class="service-balls-item"><a href="#"><img src="files/service-balls-4.jpg" alt="" /></a></div>
-                                <div class="service-balls-item"><a href="#"><img src="files/service-balls-1.jpg" alt="" /></a></div>
-                                <div class="service-balls-item"><a href="#"><img src="files/service-balls-2.jpg" alt="" /></a></div>
-                                <div class="service-balls-item"><a href="#"><img src="files/service-balls-3.jpg" alt="" /></a></div>
-                                <div class="service-balls-item"><a href="#"><img src="files/service-balls-4.jpg" alt="" /></a></div>
+                                <div class="service-balls-item"><a href="windows/balls.html" class="window-link"><img src="files/baloons-1.jpg" alt="" /> <div class="service-balls-item-title">Классические шары</div></a></div>
+                                <div class="service-balls-item"><a href="windows/balls.html" class="window-link"><img src="files/baloons-2.jpg" alt="" /> <div class="service-balls-item-title">Панч-бол</div></a></div>
+                                <div class="service-balls-item"><a href="windows/balls.html" class="window-link"><img src="files/baloons-3.jpg" alt="" /> <div class="service-balls-item-title">Миларовые шары</div></a></div>
+                                <div class="service-balls-item"><a href="windows/balls.html" class="window-link"><img src="files/baloons-4.jpg" alt="" /> <div class="service-balls-item-title">Фигурные шары</div></a></div>
+                                <div class="service-balls-item"><a href="windows/balls.html" class="window-link"><img src="files/baloons-5.jpg" alt="" /> <div class="service-balls-item-title">Светящиеся шары</div></a></div>
+                                <div class="service-balls-item"><a href="windows/balls.html" class="window-link"><img src="files/baloons-6.jpg" alt="" /> <div class="service-balls-item-title">Брендированные шары</div></a></div>
                             </div>
                         </div>
                     </div>
