--- a/baloons.html
+++ b/baloons.html
@@ -149,7 +149,7 @@
                             </div>
                         </div>
 
-                        <div class="baloons-btn"><a href="windows/order.html" class="window-link"><span class="baloons-btn-text">Заказать оформление</span></a></div>
+                        <div class="baloons-btn"><a href="windows/order.html" class="window-link order-link"><span class="baloons-btn-text">Заказать оформление</span></a></div>
                     </div>
                 </div>
                 <!-- content END -->
