--- a/main.html
+++ b/main.html
@@ -106,7 +106,7 @@
                                         <div class="slider-item-category">/ Праздник</div>
                                         <div class="slider-item-title">Загадай желание</div>
                                         <div class="slider-item-text">Повышаем градус удовольствия!<br /> Каскад облаков из разноцветных воздушных шаров</div>
-                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
+                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link order-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
                                     </div>
                                 </div>
                             </div>
@@ -122,7 +122,7 @@
                                         <div class="slider-item-category">/ Праздник</div>
                                         <div class="slider-item-title">Дарим радость</div>
                                         <div class="slider-item-text">Запусти в небо облако разноцветных шаров и серебристых звезд</div>
-                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
+                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link order-link" data-holiday="3"><span class="slider-item-link-text">То, что надо!</span></a></div>
                                     </div>
                                 </div>
                             </div>
@@ -138,7 +138,7 @@
                                         <div class="slider-item-category">/ Праздник</div>
                                         <div class="slider-item-title">Новый год</div>
                                         <div class="slider-item-text">Оригинальное оформление и&nbsp;украшение вашего дома и&nbsp;новогодней ёлки</div>
-                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
+                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link order-link" data-category="1"><span class="slider-item-link-text">То, что надо!</span></a></div>
                                     </div>
                                 </div>
                             </div>
@@ -154,7 +154,7 @@
                                         <div class="slider-item-category">/ Праздник</div>
                                         <div class="slider-item-title">Новый год</div>
                                         <div class="slider-item-text">Оригинальное оформление и&nbsp;украшение вашего дома и&nbsp;новогодней ёлки</div>
-                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
+                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link order-link" data-category="1" data-holiday="3"><span class="slider-item-link-text">То, что надо!</span></a></div>
                                     </div>
                                 </div>
                             </div>
@@ -170,7 +170,7 @@
                                         <div class="slider-item-category">/ Декор</div>
                                         <div class="slider-item-title">Времена года</div>
                                         <div class="slider-item-text">Оригинальное оформление и&nbsp;украшение вашего дома и&nbsp;новогодней ёлки</div>
-                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
+                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link order-link" data-category="6"><span class="slider-item-link-text">То, что надо!</span></a></div>
                                     </div>
                                 </div>
                             </div>
@@ -186,7 +186,7 @@
                                         <div class="slider-item-category">/ Декор</div>
                                         <div class="slider-item-title">Времена года</div>
                                         <div class="slider-item-text">Оригинальное оформление и&nbsp;украшение вашего дома и&nbsp;новогодней ёлки</div>
-                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
+                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link order-link" data-category="6"><span class="slider-item-link-text">То, что надо!</span></a></div>
                                     </div>
                                 </div>
                             </div>
@@ -202,7 +202,7 @@
                                         <div class="slider-item-category">/ Декор</div>
                                         <div class="slider-item-title">Декор в&nbsp;деталях</div>
                                         <div class="slider-item-text">Создаем неповторимые арт-инсталляции из воздушных шаров</div>
-                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
+                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link order-link" data-category="6"><span class="slider-item-link-text">То, что надо!</span></a></div>
                                     </div>
                                 </div>
                             </div>
@@ -218,7 +218,7 @@
                                         <div class="slider-item-category">/ Декор</div>
                                         <div class="slider-item-title">Декор в&nbsp;деталях</div>
                                         <div class="slider-item-text">Создаем неповторимые арт-инсталляции из воздушных шаров</div>
-                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
+                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link order-link" data-holiday="26"><span class="slider-item-link-text">То, что надо!</span></a></div>
                                     </div>
                                 </div>
                             </div>
@@ -234,7 +234,7 @@
                                         <div class="slider-item-category">/ Декор</div>
                                         <div class="slider-item-title">Cчастье без&nbsp;границ</div>
                                         <div class="slider-item-text">Смотрите наши проекты, созданные с&nbsp;любовью и удовольствием специально для вас</div>
-                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
+                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link order-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
                                     </div>
                                 </div>
                             </div>
@@ -248,7 +248,7 @@
                                         <div class="slider-item-category">/ Декор</div>
                                         <div class="slider-item-title">Декор в&nbsp;деталях</div>
                                         <div class="slider-item-text">Создаем неповторимые арт-инсталляции из воздушных шаров</div>
-                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
+                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link order-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
                                     </div>
                                 </div>
                             </div>
@@ -262,7 +262,7 @@
                                         <div class="slider-item-category">/ Декор</div>
                                         <div class="slider-item-title">Декор в&nbsp;деталях</div>
                                         <div class="slider-item-text">Создаем неповторимые арт-инсталляции из воздушных шаров</div>
-                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
+                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link order-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
                                     </div>
                                 </div>
                             </div>
@@ -276,7 +276,7 @@
                                         <div class="slider-item-category">/ Леди</div>
                                         <div class="slider-item-title">Праздник для нее</div>
                                         <div class="slider-item-text">Для тех, кто действительно любит роскошь у нас есть доза удовольствия в виде воздушной инсталляции</div>
-                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
+                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link order-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
                                     </div>
                                 </div>
                             </div>
@@ -290,7 +290,7 @@
                                         <div class="slider-item-category">/ Джентельмены</div>
                                         <div class="slider-item-title">Праздник для него</div>
                                         <div class="slider-item-text">Говоря о свободе, мы подразумеваем свободу выбора. Вам решать — золото или черный…</div>
-                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
+                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link order-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
                                     </div>
                                 </div>
                             </div>
@@ -304,7 +304,7 @@
                                         <div class="slider-item-category">/ Дети</div>
                                         <div class="slider-item-title">Атмосфера радости</div>
                                         <div class="slider-item-text">Сказочные истории воздушных арт-инсталляций откроют вам вход в&nbsp;волшебный мир чудес</div>
-                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
+                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link order-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
                                     </div>
                                 </div>
                             </div>
@@ -318,7 +318,7 @@
                                         <div class="slider-item-category">/ Дети</div>
                                         <div class="slider-item-title">Атмосфера радости</div>
                                         <div class="slider-item-text">Сказочные истории воздушных арт-инсталляций откроют вам вход в&nbsp;волшебный мир чудес</div>
-                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
+                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link order-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
                                     </div>
                                 </div>
                             </div>
@@ -332,7 +332,7 @@
                                         <div class="slider-item-category">/ Бизнес</div>
                                         <div class="slider-item-title">Бизнес- решения</div>
                                         <div class="slider-item-text">Создаем великолепные инсталляции, подчеркивающие неповторимый стиль вашего бизнеса</div>
-                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
+                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link order-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
                                     </div>
                                 </div>
                             </div>
@@ -346,7 +346,7 @@
                                         <div class="slider-item-category">/ Бизнес</div>
                                         <div class="slider-item-title">Бизнес- решения</div>
                                         <div class="slider-item-text">Создаем великолепные инсталляции, подчеркивающие неповторимый стиль вашего бизнеса</div>
-                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
+                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link order-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
                                     </div>
                                 </div>
                             </div>
@@ -360,7 +360,7 @@
                                         <div class="slider-item-category">/ Бизнес</div>
                                         <div class="slider-item-title">Бизнес- решения</div>
                                         <div class="slider-item-text">Создаем великолепные инсталляции, подчеркивающие неповторимый стиль вашего бизнеса</div>
-                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
+                                        <div class="slider-item-link"><a href="windows/order.html" class="window-link order-link"><span class="slider-item-link-text">То, что надо!</span></a></div>
                                     </div>
                                 </div>
                             </div>
@@ -495,7 +495,7 @@
                             <p>Наши заказчики лучшие в мире — они позволяют реализоваться в новых, сложных, интереснейших проектах.</p>
                             <p>Среди клиентов, как небольшие, так и крупные компании, но&nbsp;вне зависимости от крутизны бренда мы с одинаковой ответственностью и старанием подходим к решению поставленных задач.</p>
                             <p>Обращаясь к нам, мы гарантируем высокое качество результата, адекватные сроки и цены.</p>
-                            <div class="main-how-link"><a href="windows/order.html" class="window-link"><span class="main-how-link-text">Связаться с нами</span></a></div>
+                            <div class="main-how-link"><a href="windows/order.html" class="window-link order-link"><span class="main-how-link-text">Связаться с нами</span></a></div>
                         </div>
                     </div>
                 </div>
