--- a/services.html
+++ b/services.html
@@ -106,7 +106,7 @@
 
                         <!-- services header -->
                         <div class="services-header">
-                            <div class="services-header-order-link"><a href="windows/order.html" class="window-link"><span class="services-header-order-link-text">Заказать оформление</span></a></div>
+                            <div class="services-header-order-link"><a href="windows/order.html" class="window-link order-link"><span class="services-header-order-link-text">Заказать оформление</span></a></div>
                             <div class="services-header-category">
                                 <ul>
                                     <li data-filter=".birthday"><a href="#"><span class="services-header-category-title">День рождения</span></a></li>
