--- a/services_inside.html
+++ b/services_inside.html
@@ -142,7 +142,7 @@
                                 <div class="service-title">Итальянские шары</div>
                                 <div class="service-descr">Итальянские шары ручной работы из&nbsp;мурманского латекса - это&nbsp;лучшее украшение для вашей помолвки!</div>
                                 <div class="service-price"><strong>от 20 000</strong> <span class="rubl">₽</span></div>
-                                <div class="service-order-link"><a href="windows/order.html" class="window-link"><span class="service-order-link-text">Заказать оформление</span></a></div>
+                                <div class="service-order-link"><a href="windows/order.html" class="window-link order-link"><span class="service-order-link-text">Заказать оформление</span></a></div>
                             </div>
                             <!-- service text END -->
 
@@ -176,8 +176,8 @@
                     <div class="container">
                         <div class="service-call-inner">
                             <div class="service-call-title">Позвоните<br /> нам</div>
-                            <div class="service-call-text">на номер +7 (495) 123-45-67 или <a href="windows/order.html" class="window-link">оставьте заявку</a><br /> Мы подберем для Вас лучшее решение Вашей задачи<br /> и ответим на все Ваши вопросы</div>
-                            <div class="service-call-link"><a href="windows/order.html" class="window-link"><span class="service-call-link-text">Заказать оформление</span></a></div>
+                            <div class="service-call-text">на номер +7 (495) 123-45-67 или <a href="windows/order.html" class="window-link order-link">оставьте заявку</a><br /> Мы подберем для Вас лучшее решение Вашей задачи<br /> и ответим на все Ваши вопросы</div>
+                            <div class="service-call-link"><a href="windows/order.html" class="window-link order-link"><span class="service-call-link-text">Заказать оформление</span></a></div>
                         </div>
                     </div>
                 </div>
