--- a/stories_inside.html
+++ b/stories_inside.html
@@ -143,7 +143,7 @@
                                 <div class="story-title">Наши истории</div>
                                 <div class="story-subtitle">Новый год в&nbsp;«Газпроме»</div>
                                 <div class="story-descr">С размахом и шиком отпраздновал Газпром в 2017-м году День народного единства! Гостям были подарены ценные подарки, а волшебную атмосферу праздника обеспечивали мы с помощью уникальной арт-инсталляции из шаров под называние «Газовая труба на фоне морского заката». Не осталось ни одного недовольного гостя!</div>
-                                <div class="story-order-link"><a href="windows/order.html" class="window-link"><span class="story-order-link-text">Хочу так же!</span></a></div>
+                                <div class="story-order-link"><a href="windows/order.html" class="window-link order-link"><span class="story-order-link-text">Хочу так же!</span></a></div>
                             </div>
                             <!-- service text END -->
 
@@ -198,8 +198,8 @@
                     <div class="container">
                         <div class="service-call-inner">
                             <div class="service-call-title">Позвоните<br /> нам</div>
-                            <div class="service-call-text">на номер +7 (495) 123-45-67 или <a href="windows/order.html" class="window-link">оставьте заявку</a><br /> Мы подберем для Вас лучшее решение Вашей задачи<br /> и ответим на все Ваши вопросы</div>
-                            <div class="service-call-link"><a href="windows/order.html" class="window-link"><span class="service-call-link-text">Заказать оформление</span></a></div>
+                            <div class="service-call-text">на номер +7 (495) 123-45-67 или <a href="windows/order.html" class="window-link order-link">оставьте заявку</a><br /> Мы подберем для Вас лучшее решение Вашей задачи<br /> и ответим на все Ваши вопросы</div>
+                            <div class="service-call-link"><a href="windows/order.html" class="window-link order-link"><span class="service-call-link-text">Заказать оформление</span></a></div>
                         </div>
                     </div>
                 </div>
