--- a/stories_inside.html
+++ b/stories_inside.html
@@ -39,7 +39,7 @@
                 <header>
                     <div class="container">
 
-                        <div class="logo"></div>
+                        <div class="logo"><a href="#"></a></div>
 
                         <div class="title">арт-декор<br /> оформление праздников</div>
 
